re PR target/51534 (Bad code gen for vcgtq_u32 NEON intrinsic)

PR target/51534
	* gcc/config/arm/arm.c (neon_builtin_data): Add entries for vcgeu
	and vcgtu.
	* gcc/config/arm/arm_neon.h: Regenerate.
	* gcc/config/arm/neon.md (unspec): Add UNSPEC_VCGEU, and UNSPEC_VCGTU.
	(neon_vcgeu): New insn.
	(neon_vcgtu): Likewise.
	* gcc/config/arm/neon.ml (s_8_32, u_8_32): New lists.
	(ops): Unsigned comparison intrinsics call a different
	builtin.
	* gcc/testsuite/gcc.target/arm/neon/pr51534.c: New testcase.

From-SVN: r184629